Bug 163956 - FILEOPEN RTF Legacy form control in table ignores paragraph spacing settings
Summary: FILEOPEN RTF Legacy form control in table ignores paragraph spacing settings
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RTF-Fields
  Show dependency treegraph
 
Reported: 2024-11-18 19:59 UTC by Gabor Kelemen (Collabora)
Modified: 2025-01-27 17:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2016 (51.06 KB, application/msword)
2024-11-18 19:59 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-11-18 19:59:34 UTC
Created attachment 197681 [details]
Example file from Word 2016

Attached example file contains legacy text form controls with 6 pt before-after paragraph spacing set inside a table.
These settings are correctly imported into Writer, but not applied as there is no spacing from the top of the table cell.

1. Open attached file
-> Grey form controls stick to the top of the table cell

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 83910246044c1e05a3b50e25d21ac6a31566cc38
CPU threads: 14; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

This seems to have been broken sometime recently in 25.2x, until 24.8 it was good.
Comment 1 Gabor Kelemen (Collabora) 2024-11-18 20:12:53 UTC
Seems to be a side effect from

https://git.libreoffice.org/core/+/f806fc136b3410ec9a1e09320d100c78b33c867b

commit f806fc136b3410ec9a1e09320d100c78b33c867b	[log]
author	Oliver Specht <oliver.specht@cib.de>	Thu Jun 13 14:49:16 2024 +0200
committer	Thorsten Behrens <thorsten.behrens@allotropia.de>	Tue Jul 30 22:42:11 2024 +0200

tdf#137335 calculate paragraph height in RTF/DOCX
Comment 2 Commit Notification 2024-11-19 00:15:18 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/43b9ab55a3b6ac1497bcadd6a71a5a133ece4d3d

tdf#163956 calculate line height differently in FORMTEXT

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Buovjaga 2024-12-06 18:30:08 UTC
Can this be closed as fixed?
Comment 4 Gabor Kelemen (Collabora) 2025-01-27 17:05:48 UTC
Verified in 

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 85c8901dc2710e91bccb64cd7d8068441f42f65b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Now the form controls do have the spacing from the table borders.