tdf#163956 calculate line height differently in FORMTEXT

Lines containing EN_SPACES only ignore character height
while calculating line height. In FORMTEXT fieldmarks the character
height of the default EN_SPACES is not ignored.

Change-Id: I8a89f13875f61ed287ce1697a91b42f20bd17192
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176147
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: Jenkins